First part of intro.

--- a/note1.tex
+++ b/note1.tex
@@ -14,144 +14,144 @@
 \newtheorem{theorem}{Theorem}
 
 \newcommand{\TurnADND}[2]
-	{ {#1}\vdash_{\textbf{\sf AdaptiveND}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf AdaptiveND}}  {#2}}
 
 \newcommand{\Turn}[2]
-	{ {#1}\vdash_{\textbf{\sf s}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s}}  {#2}}
 \newcommand{\TurnNext}[2]
-	{ {#1}\vdash_{\textbf{\sf s+1}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s+1}}  {#2}}
 \newcommand{\TurnNextn}[2]
-		{ {#1}\vdash_{\textbf{\sf s+n}}  {#2}}
+        { {#1}\vdash_{\textbf{\sf s+n}}  {#2}}
 \newcommand{\TurnNextnn}[2]
-		{ {#1}\vdash_{\textbf{\sf s+n+1}}  {#2}}
+        { {#1}\vdash_{\textbf{\sf s+n+1}}  {#2}}
 \newcommand{\TurnNextNext}[2]
-	{ {#1}\vdash_{\textbf{\sf s+2}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s+2}}  {#2}}
 
 \newcommand{\TurnNextNextNext}[2]
-	{ {#1}\vdash_{\textbf{\sf s+3}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s+3}}  {#2}}
 
 \newcommand{\TurnPrime}[2]
-	{ {#1}\vdash_{\textbf{\sf s'}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s'}}  {#2}}
 
 \newcommand{\TurnPrimePrime}[2]
-	{ {#1}\vdash_{\textbf{\sf s''}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s''}}  {#2}}
 
 
 \newcommand{\TurnOne}[2]
-	{ {#1}\vdash_{\textbf{\sf 1}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 1}}  {#2}}
 \newcommand{\TurnMarked}[2]
-	{ {#1}\vdash_{\textbf{\sf s\XBox}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s\XBox}}  {#2}}
 
 \newcommand{\TurnMarkedREL}[2]
-	{ {#1}\vdash_{\textbf{\sf s\XBox R}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s\XBox R}}  {#2}}
 \newcommand{\TurnMarkedMA}[2]
-	{ {#1}\vdash_{\textbf{\sf s\XBox MA}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s\XBox MA}}  {#2}}
 \newcommand{\TurnChecked}[2]
-	{ {#1}\vdash_{\textbf{\sf \checked}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf \checked}}  {#2}}
 \newcommand{\TurnMarkedNext}[2]
-	{ {#1}\vdash_{\textbf{\sf s+1\XBox}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s+1\XBox}}  {#2}}
 \newcommand{\TurnMarkedprime}[2]
-	{ {#1}\vdash_{\textbf{\sf s'\XBox}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s'\XBox}}  {#2}}
 
 
 \newcommand{\TurnMaxPlusOne}[2]
-		{ {#1}\vdash_{\textbf{\sf max(s,s')+1}}  {#2}}
+        { {#1}\vdash_{\textbf{\sf max(s,s')+1}}  {#2}}
 
 
 \newcommand{\TurnMarkedNextREL}[2]
-	{ {#1}\vdash_{\textbf{\sf s+1\XBox R}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s+1\XBox R}}  {#2}}
 \newcommand{\TurnMarkedNextNextREL}[2]
-	{ {#1}\vdash_{\textbf{\sf s+n+1\XBox R}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s+n+1\XBox R}}  {#2}}
 \newcommand{\TurnMaxPlusOneREL}[2]
-	{ {#1}\vdash_{\textbf{\sf max(s,s')+1\XBox R}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf max(s,s')+1\XBox R}}  {#2}}
 
 \newcommand{\TurnMarkedNextMA}[2]
-	{ {#1}\vdash_{\textbf{\sf s+1\XBox MA}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s+1\XBox MA}}  {#2}}
 \newcommand{\TurnMarkedNextNextMA}[2]
-	{ {#1}\vdash_{\textbf{\sf s+n+1\XBox MA}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf s+n+1\XBox MA}}  {#2}}
 
 
 %\newcommand{\TurnOne}[2]
-%	{ {#1}\vdash_{\textbf{\sf 1}}  {#2}}
+%   { {#1}\vdash_{\textbf{\sf 1}}  {#2}}
 \newcommand{\TurnTwo}[2]
-	{ {#1}\vdash_{\textbf{\sf 2}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 2}}  {#2}}
 \newcommand{\TurnThree}[2]
-	{ {#1}\vdash_{\textbf{\sf 3}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 3}}  {#2}}
 \newcommand{\TurnFour}[2]
-	{ {#1}\vdash_{\textbf{\sf 4}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 4}}  {#2}}
 \newcommand{\TurnFive}[2]
-	{ {#1}\vdash_{\textbf{\sf 5}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 5}}  {#2}}
 \newcommand{\TurnSix}[2]
-	{ {#1}\vdash_{\textbf{\sf 6}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 6}}  {#2}}
 
 \newcommand{\TurnSeven}[2]
-	{ {#1}\vdash_{\textbf{\sf 7}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 7}}  {#2}}
 
 \newcommand{\TurnMarkedSevenREL}[2]
-	{ {#1}\vdash_{\textbf{\sf 7\XBox R}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 7\XBox R}}  {#2}}
 
 \newcommand{\TurnMarkedEightREL}[2]
-	{ {#1}\vdash_{\textbf{\sf 8\XBox R}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 8\XBox R}}  {#2}}
 
 
 \newcommand{\TurnEight}[2]
-	{ {#1}\vdash_{\textbf{\sf 8}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 8}}  {#2}}
 
 
 \newcommand{\TurnMarkedFiveMA}[2]
-	{ {#1}\vdash_{\textbf{\sf 5\XBox MA}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 5\XBox MA}}  {#2}}
 \newcommand{\TurnMarkedEightMA}[2]
-	{ {#1}\vdash_{\textbf{\sf 8\XBox MA}}  {#2}}
-	
+    { {#1}\vdash_{\textbf{\sf 8\XBox MA}}  {#2}}
+    
 \newcommand{\TurnNine}[2]
-	{ {#1}\vdash_{\textbf{\sf 9}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 9}}  {#2}}
 
 
 \newcommand{\TurnTen}[2]
-	{ {#1}\vdash_{\textbf{\sf 10}}  {#2}}
-	
+    { {#1}\vdash_{\textbf{\sf 10}}  {#2}}
+    
 \newcommand{\TurnEleven}[2]
-		{ {#1}\vdash_{\textbf{\sf 11}}  {#2}}
-	
+        { {#1}\vdash_{\textbf{\sf 11}}  {#2}}
+    
 
 \newcommand{\TurnMarkedElevenREL}[2]
-	{ {#1}\vdash_{\textbf{\sf 11\XBox R}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 11\XBox R}}  {#2}}
 
 
 \newcommand{\TurnMarkedTwelveREL}[2]
-	{ {#1}\vdash_{\textbf{\sf 12\XBox R}}  {#2}}
+    { {#1}\vdash_{\textbf{\sf 12\XBox R}}  {#2}}
 
 
 \newcommand{\TurnThirteen}[2]
-		{ {#1}\vdash_{\textbf{\sf 13}}  {#2}}
+        { {#1}\vdash_{\textbf{\sf 13}}  {#2}}
 
 \newcommand{\TurnFourteen}[2]
-		{ {#1}\vdash_{\textbf{\sf 14}}  {#2}}
+        { {#1}\vdash_{\textbf{\sf 14}}  {#2}}
 
 \newcommand{\TurnFifteen}[2]
-		{ {#1}\vdash_{\textbf{\sf 15}}  {#2}}
+        { {#1}\vdash_{\textbf{\sf 15}}  {#2}}
 
 
 \newcommand{\TurnSixteen}[2]
-		{ {#1}\vdash_{\textbf{\sf 16}}  {#2}}
+        { {#1}\vdash_{\textbf{\sf 16}}  {#2}}
 
 \newcommand{\TurnSeventeen}[2]
-		{ {#1}\vdash_{\textbf{\sf 17}}  {#2}}
+        { {#1}\vdash_{\textbf{\sf 17}}  {#2}}
 
 
 \newcommand{\TurnEighteen}[2]
-		{ {#1}\vdash_{\textbf{\sf 18}}  {#2}}
+        { {#1}\vdash_{\textbf{\sf 18}}  {#2}}
 
 \newcommand{\TurnNineteen}[2]
-		{ {#1}\vdash_{\textbf{\sf 19}}  {#2}}
+        { {#1}\vdash_{\textbf{\sf 19}}  {#2}}
 
 
 %\newcommand{\TurnT}[2]
-%	{ \Delta_0;{#1}\vdash  {#2}}
+%   { \Delta_0;{#1}\vdash  {#2}}
 %\newcommand{\TurnTT}[2]
-%	{ \Delta_0;{#1}\vdash_{\sf JC_1}  {#2}}
+%   { \Delta_0;{#1}\vdash_{\sf JC_1}  {#2}}
 %\newcommand{\Turnj}[1]
-%	{ \Delta_0\vdash_{\sf J_0}  {#1}}
+%   { \Delta_0\vdash_{\sf J_0}  {#1}}
 %\newcommand{\Turnjc}[3]
 %    { {#1};{#2}\vdash_{\textbf{\sf JC}}  {#3}}
 
@@ -175,20 +175,67 @@ We present a multi-conclusion natural deduction calculus based on minimal logic 
 
 \section{Intro}
 
-We present a multi-conclusion natural deduction calculus that mimics the dynamic reasoning at work in adaptive logics (\cite{batens07}). This is the first attempt to reconstruct the dynamics typical of adaptive logics in a natural deduction setting. The resulting system does not correspond to the usual structure known as the Standard Format for Adaptive Logics: this means that, though we \textit{do not} introduce an adaptive logic proper, we can talk of a natural deduction system for \textit{adaptive reasoning}. We characterize such a way of reasoning as having properties that identify adaptive dynamics.  To do so, the standard proof-theoretical procedure of a natural deduction system is enhanced with:
+In this paper we outline a multiple-conclusion natural deduction calculus in which the dynamics of standard (Fitch-style) dynamic proofs of Adaptive Logics \cite{batens07} can be reconstructed. Adaptive logics are a family of logics that can be used to formalise a wide range of defeasible reasoning forms. The consequence-relations of adaptive logics rely on the standard idea of interpreting premises as normally as possible through the selection of models of its premises, and it is only at the level of its proof-theory that it's distinctive approach comes to the fore. Adaptive logics, namely, reconstruct defeasible reasoning patterns as dynamic proofs; proofs in which earlier steps may be retracted at a later stage when the assumptions they were based on no longer hold.
 
-\begin{enumerate}
-\item a rule-based ability of introducing abnormal formulas of the form $A\wedge \neg A$;\footnote{In the current format we focus on inconsistency-adaptive logics, though the generalization to the natural deduction for other adaptive formats seems possible.} the appearance of such formulas on the right-hand side of our derivability sign justifies the claim that our system is extended to a multi-conclusion setting;
+The specific system we describe here is for an inconsistency adaptive logic; a logic that captures the reasoning one obtains when one reasons paraconsistently to avoid triviality in the face of inconsistency, but that at the same time tries to make up for the deductive weakness of paraconsistent reasoning by interpreting the premises as consistently as possible. This choice brings us closer to the original motivations for the development of adaptive logic, but also allows us to engage with current philosophical debates and with certain aspects of Graham's work.
 
-\item a rule-based ability of deriving formulas under conditions that some such abnormal formula is not true;
+The dynamics of retracting earlier lines in a proof can be captured in a rather natural way in a linear proof-format, including standard axiomatic and Fitch-style natural deduction proofs, but is much less straightforward in a tree-like proof-format. Consider, for instance, the following retraction of what happens to be an instance of the application of \emph{Ex Contradictione Quodlibet}:
 
-\item the procedural ability of rejecting derivation steps previously obtained by way of marking in view of effectively derived abnormal formulas.
-\end{enumerate}
+\begin{figure}[h!]
+\centering
+    \begin{tabular}{cllcl}
+        (1) & $p$ & Prem & $\emptyset$\\
+        (2) & $p \vee q$ & Add & $\emptyset$\\
+        (3) & $\neg p$ & Prem & $\emptyset$\\
+        (4) & $q$ & DS & $\{p\}$ & \checkmark$^5$\\
+        (5) & $p \wedge \neg q$ & Adj & $\emptyset$
+    \end{tabular}
+\end{figure}
+\noindent Here, at line (4) disjunctive syllogism is applied on the condition that $p$ behaves normally, i.e.\ that the contradiction $p \wedge \neg p$ hasn't been derived. When this contradiction is effectively derived at line (5), the line (4) is marked and is from then on no longer assumed to be part of the proof. This type of reasoning is the common core of how the idea of provisional applications of classical inference-rules can be applied to paraconsistent logics that reject the disjunctive syllogism, but in which the restricted form $\phi \vee \psi, \neg \phi / \psi \vee (\phi \wedge \neg \phi)$ is retained.
 
-These are all properties inspired by the adaptive logics approach. In view of the last property, we need moreover to annotate the derivability relation with a stage counting mechanism to keep track of the steps performed in the derivation tree (thus counting also premises rather than only rules).
+Contrast this, now, with the following attempt to reconstruct a similar reasoning-process in a Prawitz-style proof-tree:
+\begin{prooftree}
+    \AxiomC{$\Gamma \vdash p$}
+    \RightLabel{$\vee$I}
+    \UnaryInfC{$\Gamma \vdash p \vee q$}
+    \AxiomC{$\Gamma \vdash \neg p$}
+    \AxiomC{$\Gamma \not\vdash p \wedge \neg p$}
+    \LeftLabel{DS$^*$}
+    \TrinaryInfC{$\Gamma \vdash q$}  
+    \AxiomC{$\Gamma \vdash p$}
+    \AxiomC{$\Gamma \vdash \neg p$}
+    \RightLabel{$\wedge$I}
+    \BinaryInfC{$\Gamma \vdash p \wedge \neg p$}
+    \BinaryInfC{?}
+\end{prooftree}
+When in the right-hand branch of the proof an explicit contradiction is derived, the assumption that no such contradiction is derived (which is stated explicitly in the left-hand branch) no longer holds. In this format, however, the order used to construct the proof cannot be read off the proof itself (an issue that could easily be fixed), but more importantly, it isn't even clear what it might mean to retract the line where $q$ is derived since the result of removing that line from the proof it itself no longer a well-formed proof.
 
-%These are all properties inspired by the adaptive logics approach. This means that, though we \textit{do not} introduce an adaptive logic proper, we can talk of a natural-deduction system for \textit{adaptive reasoning}. In fact, 
-Our system is not even close to a standard format for AL. We express the standard triple $\{LLL,\Omega,STRATEGY\}$ in a system where the Lower Limit Logic is extended to include rules both for expressing the abnormal formulas in $\Omega$ and to interpret the selection Strategy. In other words, this rule-based approach allows to merge the rules and axioms of a typical $LLL$ and the rules of the $AL$ based on abnormal formulas into a single system of rules. 
+The proof-format we propose solves this problem by adding indices to judgements to keep track of stages in the construction of a proof, and by exploiting the fact that since every assumption or premise that is used in a proof-step should explicitly be written down in the place it is used, judgements that are `marked' at a certain stage do not have to be removed because there is simply no need to prevent their implicit re-use. Instead, it is the derivation of the same judgement at a later stage that is (or may be) blocked because the original assumption that led to its initial derivation probably no longer holds.
+
+Additionally, the system makes the connection between unconditional derivations of certain disjunctions in the paraconsistent logic and the conditional deductions of one of their disjuncts in the adaptive logic explicit by adopting multiple-conclusion judgements. This formal feature has the additional advantage that it allows us to re-assess certain current debates regarding the question of how one should best approach the question of classical recapture in paraconsistent logics.
+
+HERE 
+
+When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic this question is often deemed quite urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. This is the problem of \emph{classical recapture}. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. The class of adaptive logics that have been formulated since the earliest formulation of this paradigm as a response to the problem of classical recapture generalise this idea, and provide a general framework in which many types of defeasible inference-forms can be rigourously formalised.
+
+In several papers Graham Priest has explicitly endorsed this type of approach to the classical recapture problem of the paraconsistent logic \textbf{LP}, and has defended his own preferred formalisation and motivation for what he calls \emph{Minimally Inconsistent LP}. When compared to the systems developed in the adaptive logic tradition, this system stands out because it is based on a strong paraconsistent logic that nevertheless lacks a detachable implication (which makes the problem of classical recapture even more stringent), but also because it is put forward as a potential universal inference engine that can be applied in all contexts. At the level of its formal characterisation, minimally inconsistent LP differs from its closest neighbour ACLuNs$^m$ 
+
+
+
+% We present a multi-conclusion natural deduction calculus that mimics the dynamic reasoning at work in adaptive logics (\cite{batens07}). This is the first attempt to reconstruct the dynamics typical of adaptive logics in a natural deduction setting. The resulting system does not correspond to the usual structure known as the Standard Format for Adaptive Logics: this means that, though we \textit{do not} introduce an adaptive logic proper, we can talk of a natural deduction system for \textit{adaptive reasoning}. We characterize such a way of reasoning as having properties that identify adaptive dynamics.  To do so, the standard proof-theoretical procedure of a natural deduction system is enhanced with:
+
+% \begin{enumerate}
+% \item a rule-based ability of introducing abnormal formulas of the form $A\wedge \neg A$;\footnote{In the current format we focus on inconsistency-adaptive logics, though the generalization to the natural deduction for other adaptive formats seems possible.} the appearance of such formulas on the right-hand side of our derivability sign justifies the claim that our system is extended to a multi-conclusion setting;
+
+% \item a rule-based ability of deriving formulas under conditions that some such abnormal formula is not true;
+
+% \item the procedural ability of rejecting derivation steps previously obtained by way of marking in view of effectively derived abnormal formulas.
+% \end{enumerate}
+
+% These are all properties inspired by the adaptive logics approach. In view of the last property, we need moreover to annotate the derivability relation with a stage counting mechanism to keep track of the steps performed in the derivation tree (thus counting also premises rather than only rules).
+
+% %These are all properties inspired by the adaptive logics approach. This means that, though we \textit{do not} introduce an adaptive logic proper, we can talk of a natural-deduction system for \textit{adaptive reasoning}. In fact, 
+% Our system is not even close to a standard format for AL. We express the standard triple $\{LLL,\Omega,STRATEGY\}$ in a system where the Lower Limit Logic is extended to include rules both for expressing the abnormal formulas in $\Omega$ and to interpret the selection Strategy. In other words, this rule-based approach allows to merge the rules and axioms of a typical $LLL$ and the rules of the $AL$ based on abnormal formulas into a single system of rules. 
 
 %\subsection*{Other Works}
 %xxx
@@ -254,7 +301,7 @@ The set $\Gamma$ on the left-hand side of the derivability sign is to be read co
 \begin{mathpar}
 \infer*[right=Prem] {{\Turn {\Gamma; \cdot} {\sf wf}}\\ {\phi \in \Gamma}}{\TurnNext {\Gamma; \cdot} {\phi}}
 \and
-\infer*[right=$\Delta$-formation] {{\Turn {\Gamma; \cdot} {\Delta} } \\ {\phi \in {\sf Prop}}} {\TurnNext {\Gamma; \cdot} {\Delta, \phi}}
+\infer*[right=$\Delta$-formation] {{\Turn {\Gamma; \cdot} {\Delta \cup \{\phi\}}}} {\TurnNext {\Gamma; \cdot} {\Delta, \phi}}
 
 \end{mathpar}
 \caption{Context Formation Rules}\label{fig:contextrules}
