revised intro so far

--- a/note1.tex
+++ b/note1.tex
@@ -175,11 +175,11 @@ We present a multi-conclusion natural deduction calculus based on minimal logic 
 
 \section{Intro}
 
-In this paper we outline a multiple-conclusion natural deduction calculus in which the dynamics of standard (Fitch-style) dynamic proofs of Adaptive Logics \cite{batens07} can be reconstructed. Adaptive logics are a family of logics that can be used to formalise a wide range of defeasible reasoning forms. The consequence-relations of adaptive logics rely on the standard idea of interpreting premises as normally as possible through the selection of models of its premises, and it is only at the level of its proof-theory that it's distinctive approach comes to the fore. Adaptive logics, namely, reconstruct defeasible reasoning patterns as dynamic proofs; proofs in which earlier steps may be retracted at a later stage when the assumptions they were based on no longer hold.
+In this paper we outline a multiple-conclusion natural deduction calculus in which the dynamics of standard (Fitch-style) dynamic proofs of Adaptive Logics \cite{batens07} can be reconstructed. Adaptive logics are a family of logics that can be used to formalise a wide range of defeasible reasoning forms. The consequence-relations of adaptive logics rely on the standard idea of interpreting premises as normally as possible through the selection of models of its premises, and it is only at the level of its proof-theory that its distinctive approach comes to the fore. Adaptive logics, namely, reconstruct defeasible reasoning patterns as dynamic proofs; proofs in which earlier steps may be retracted at a later stage when the assumptions they were based on no longer hold.
 
-The specific system we describe here is for an inconsistency adaptive logic; a logic that captures the reasoning one obtains when one reasons paraconsistently to avoid triviality in the face of inconsistency, but that at the same time tries to make up for the deductive weakness of paraconsistent reasoning by interpreting the premises as consistently as possible. This choice brings us closer to the original motivations for the development of adaptive logic, but also allows us to engage with current philosophical debates and with certain aspects of Graham's work.
+The specific system we describe here is for an inconsistency adaptive logic. In such a logic, one captures the paraconsistent reasoning performed to avoid triviality in the face of inconsistency, while at the same time trying to make up for its deductive weakness by interpreting the premises as consistently as possible. This choice has the combined effect of bringing us closer to the original motivations for the development of adaptive logic, but also of allowing us to engage with current philosophical debates crucial to Priest's work.
 
-The dynamics of retracting earlier lines in a proof can be captured in a rather natural way in a linear proof-format, including standard axiomatic and Fitch-style natural deduction proofs, but is much less straightforward in a tree-like proof-format. Consider, for instance, the following retraction of what happens to be an instance of the application of \emph{Ex Contradictione Quodlibet}:
+The dynamics of retracting earlier lines in a proof can be captured in a rather natural way in a linear proof-format, including standard axiomatic and Fitch-style natural deduction proofs, but is much less straightforward in a tree-like proof-format. Consider, for instance, the following retraction instantiating an application of \emph{Ex Contradictione Quodlibet}:
 
 \begin{figure}[h!]
 \centering
@@ -188,10 +188,11 @@ The dynamics of retracting earlier lines in a proof can be captured in a rather 
         (2) & $p \vee q$ & Add & $\emptyset$\\
         (3) & $\neg p$ & Prem & $\emptyset$\\
         (4) & $q$ & DS & $\{p\}$ & \checkmark$^5$\\
-        (5) & $p \wedge \neg q$ & Adj & $\emptyset$
-    \end{tabular}
+        (5) & $p \wedge \neg p$ & Add & $\emptyset$
+        
+         \end{tabular}
 \end{figure}
-\noindent Here, at line (4) disjunctive syllogism is applied on the condition that $p$ behaves normally, i.e.\ that the contradiction $p \wedge \neg p$ hasn't been derived. When this contradiction is effectively derived at line (5), the line (4) is marked and is from then on no longer assumed to be part of the proof. This type of reasoning is the common core of how the idea of provisional applications of classical inference-rules can be applied to paraconsistent logics that reject the disjunctive syllogism, but in which the restricted form $\phi \vee \psi, \neg \phi / \psi \vee (\phi \wedge \neg \phi)$ is retained.
+\noindent Here, at line (4) disjunctive syllogism (DS) is applied on the condition that $p$ behaves normally, i.e.\ that the contradiction $p \wedge \neg p$ hasn't been derived. When this contradiction is effectively derived at line (5), the line (4) is marked and is from then on no longer assumed to be part of the proof. This type of reasoning is the common core of how the idea of provisional applications of classical inference-rules can be applied to paraconsistent logics that reject the disjunctive syllogism, but in which the restricted form $\phi \vee \psi, \neg \phi / \psi \vee (\phi \wedge \neg \phi)$ is retained.
 
 Contrast this, now, with the following attempt to reconstruct a similar reasoning-process in a Prawitz-style proof-tree:
 \begin{prooftree}
@@ -208,17 +209,17 @@ Contrast this, now, with the following attempt to reconstruct a similar reasonin
     \BinaryInfC{$\Gamma \vdash p \wedge \neg p$}
     \BinaryInfC{?}
 \end{prooftree}
-When in the right-hand branch of the proof an explicit contradiction is derived, the assumption that no such contradiction is derived (which is stated explicitly in the left-hand branch) no longer holds. In this format, however, the order used to construct the proof cannot be read off the proof itself (an issue that could easily be fixed), but more importantly, it isn't even clear what it might mean to retract the line where $q$ is derived since the result of removing that line from the proof it itself no longer a well-formed proof.
+When in the right-hand branch of the proof an explicit contradiction is derived, the assumption that no such contradiction is derived (which is stated explicitly in the left-hand branch) no longer holds. In this format, however, the order used to construct the proof cannot be read off the proof itself (an issue that could easily be fixed), but more importantly, it isn't even clear what it might mean to retract the line where $q$ is derived, since the result of removing that line from the proof it is in itself no longer a well-formed proof.
 
-The proof-format we propose solves this problem by adding indices to judgements to keep track of stages in the construction of a proof, and by exploiting the fact that since every assumption or premise that is used in a proof-step should explicitly be written down in the place it is used, judgements that are `marked' at a certain stage do not have to be removed because there is simply no need to prevent their implicit re-use. Instead, it is the derivation of the same judgement at a later stage that is (or may be) blocked because the original assumption that led to its initial derivation probably no longer holds.
+The proof-format we propose solves this problem in a two-steps approach: firstly, by adding indices to judgements to keep track of stages in the construction of a proof; and secondly, by exploiting the fact that judgements that are `marked' at a certain stage do not have to be removed, because there is simply no need to prevent their implicit re-use since every assumption or premise should explicitly be written down in the place it is used. Instead, it is the derivation of the same judgement at a later stage that is (or may be) blocked, because the original assumption that led to its initial derivation probably no longer holds.
 
-Additionally, the system makes the connection between unconditional derivations of certain disjunctions in the paraconsistent logic and the conditional deductions of one of their disjuncts in the adaptive logic explicit by adopting multiple-conclusion judgements. This formal feature has the additional advantage that it allows us to re-assess certain current debates regarding the question of how one should best approach the question of classical recapture in paraconsistent logics.
+Additionally, the system makes the connection between unconditional derivations of certain disjunctions in the paraconsistent logic and the conditional deductions of one of their disjuncts in the adaptive logic explicit by adopting multiple-conclusion judgements. This formal feature has the additional advantage that it allows us to re-assess certain current debates on how one should best approach the question of \textit{classical recapture} in paraconsistent logics. The problem can be summarised as follows. When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic, this question is often deemed urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. The class of adaptive logics that have been formulated since the earliest formulation of this paradigm as a response to the problem of classical recapture generalise this idea, and provides a general framework in which many types of defeasible inference-forms can be rigorously formalised.
 
 HERE 
 
-When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic this question is often deemed quite urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. This is the problem of \emph{classical recapture}. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. The class of adaptive logics that have been formulated since the earliest formulation of this paradigm as a response to the problem of classical recapture generalise this idea, and provide a general framework in which many types of defeasible inference-forms can be rigourously formalised.
+%When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic, this question is often deemed urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. This is the problem of \emph{classical recapture}. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. The class of adaptive logics that have been formulated since the earliest formulation of this paradigm as a response to the problem of classical recapture generalise this idea, and provide a general framework in which many types of defeasible inference-forms can be rigourously formalised.
 
-In several papers Graham Priest has explicitly endorsed this type of approach to the classical recapture problem of the paraconsistent logic \textbf{LP}, and has defended his own preferred formalisation and motivation for what he calls \emph{Minimally Inconsistent LP}. When compared to the systems developed in the adaptive logic tradition, this system stands out because it is based on a strong paraconsistent logic that nevertheless lacks a detachable implication (which makes the problem of classical recapture even more stringent), but also because it is put forward as a potential universal inference engine that can be applied in all contexts. At the level of its formal characterisation, minimally inconsistent LP differs from its closest neighbour ACLuNs$^m$ 
+In several papers Graham Priest has explicitly endorsed this type of approach to the classical recapture problem of the paraconsistent logic \textbf{LP}, and has defended his own preferred formalisation and motivation for what he calls \emph{Minimally Inconsistent LP}. When compared to the systems developed in the adaptive logic tradition, this system stands out for two reasons: it is based on a strong paraconsistent logic that nevertheless lacks a detachable implication (which makes the problem of classical recapture even more stringent); but also because it is put forward as a potential universal inference engine that can be applied in all contexts. At the level of its formal characterisation, minimally inconsistent LP differs from its closest neighbour ACLuNs$^m$ 
 
 
 
